add framework for pod docs in Config

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = FRDCSA-Platform
-author  = james
+author  = Jess Balint <jbalint@gmail.com>
 license = Perl_5
-copyright_holder = james
+copyright_holder = Andrew Dougherty <andrewdo@frdcsa.org>
 copyright_year   = 2013
 
 version = 0.001
