add Config::Any/Config::General support for config loading and new file test

--- a/dist.ini
+++ b/dist.ini
@@ -8,3 +8,9 @@ version = 0.001
 
 [@Basic]
 [PodWeaver]
+[Prereqs]
+Config::Any     = 0
+Config::General	= 0
+Log::Log4perl	= 0
+Moose		= 0
+Test::More	= 0
