start SQL database implementation

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,8 @@ version = 0.001
 [Prereqs]
 Config::Any     = 0
 Config::General	= 0
+DBI		= 0
+Error		= 0
 Log::Log4perl	= 0
 Moose		= 0
 Test::More	= 0
