enable perl critic and perl tidy for package building

--- a/dist.ini
+++ b/dist.ini
@@ -15,4 +15,10 @@ DBI		= 0
 Error		= 0
 Log::Log4perl	= 0
 Moose		= 0
+Perl::Critic	= 0
 Test::More	= 0
+
+[Test::Perl::Critic]
+;; critic_config = perlcritic.rc   ; relative to project root
+
+[PerlTidy]
