further implementation of SQLDatabase with tests

--- a/t/Org_FRDCSA_Platform_SQLDatabase.conf
+++ b/t/Org_FRDCSA_Platform_SQLDatabase.conf
@@ -1,2 +1,9 @@
 # configuration for SQLDatabase test
 # should point to an empty database for testing purposes
+<datasource main>
+	    driver = mysql
+	    host = 127.0.0.1
+	    port = 3306
+	    user = 
+	    password = 
+</datasource>
