fix license decl, expirement with more Dist::Zilla tests

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = FRDCSA-Platform
 author  = Jess Balint <jbalint@gmail.com>
-license = Perl_5
+license = Artistic_2_0
 copyright_holder = Andrew Dougherty <andrewdo@frdcsa.org>
 copyright_year   = 2013
 
@@ -19,7 +19,13 @@ MooseX::ClassAttribute	 = 0
 Perl::Critic	= 0
 Test::More	= 0
 
+[Test::EOL]
+[Test::Compile]
+[Test::Version]
 [Test::Perl::Critic]
 ;; critic_config = perlcritic.rc   ; relative to project root
+[NoTabsTests]
+[PodCoverageTests]
+[PodSyntaxTests]
 
 [PerlTidy]
