add missing pod for Log.getLogger() update dep list for modules needed for additional testing

--- a/dist.ini
+++ b/dist.ini
@@ -18,10 +18,14 @@ Moose		= 0
 MooseX::ClassAttribute	 = 0
 Perl::Critic	= 0
 Test::More	= 0
+Test::Perl::Critic = 0
+Test::Pod = 0
+Test::Pod::Coverage = 0
+Pod::Coverage::TrustPod = 0
 
 [Test::EOL]
 [Test::Compile]
-[Test::Version]
+;;[Test::Version] ;; disabled. can't pick up versions in modules....??
 [Test::Perl::Critic]
 ;; critic_config = perlcritic.rc   ; relative to project root
 [NoTabsTests]
